<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_guide_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_dummy_pizza"
        app:layout_constraintDimensionRatio="1:.75"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_guide_save"
        style="@style/MyButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="#66FFFFFF"
        android:drawableEnd="@drawable/heart_button"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/img_guide_main"
        app:layout_constraintEnd_toEndOf="parent" />

    <RelativeLayout
        android:id="@+id/relative_guide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_guide_main">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_guide_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_dummy_pizza"
            app:shapeAppearance="@style/ShapeAppearanceOverlay.Avatar" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_creator_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/img_guide_profile"
            android:text="@string/like" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_recipes_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_creator_name"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/img_guide_profile"
            android:text="@string/title_profile" />
        "
    </RelativeLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_descriptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:maxLines="3"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relative_guide" />

    <com.google.android.material.button.MaterialButton
        style="@style/MyButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:backgroundTint="#66FFFFFF"
        android:drawableEnd="@drawable/heart_button"
        android:text="@string/like"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_descriptions" />

    <com.google.android.material.button.MaterialButton
        style="@style/MyButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#66FFFFFF"
        android:drawableEnd="@drawable/heart_button"
        android:text="@string/comment"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_descriptions" />
</androidx.constraintlayout.widget.ConstraintLayout>